--- a/index.css
+++ b/index.css
@@ -1,5 +1,5 @@
-.flex-fill {
-	flex: 1 0 0;
+#bot {
+	min-height: 2rem;
 }
 
 #video {
@@ -15,8 +15,14 @@
 
 #cc {
 	flex: 3 0 0;
-	max-height: 100%;
 	overflow-y: auto;
+}
+
+#cc>.wrap {
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
 }
 
 .text {
