--- a/index.css
+++ b/index.css
@@ -15,14 +15,21 @@
 
 #cc {
 	flex: 3 0 0;
+}
+
+#cc .wrap {
+  top: 0;
+	bottom: 3rem;
+	left: 0;
+	right: 0;
 	overflow-y: auto;
 }
 
-#cc>.wrap {
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
+#toolbar {
+	bottom: 0;
+	left: 0;
+	right: 0;
+	height: 3rem;
 }
 
 .text {
