--- a/index.css
+++ b/index.css
@@ -1,3 +1,7 @@
+a {
+	color: #88DDFF!important;
+}
+
 #bot {
 	min-height: 2rem;
 }
@@ -134,6 +138,17 @@
 	left: 20%;
 	right: 20%;
 	top: 10%;
-	background-color: #000000CC;
+	bottom: 10%;
+	background-color: #000000DD;
 	z-index: 20;
+}
+
+#help>.wrap {
+	max-height: 100%;
+	overflow: auto;
+}
+
+#help-close {
+	right: 1.5rem;
+	top: 1rem;
 }
