--- a/index.css
+++ b/index.css
@@ -1,7 +1,9 @@
+/* General */
 a {
 	color: #88DDFF!important;
 }
 
+/* main */
 #bot {
 	min-height: 2rem;
 }
@@ -10,49 +12,16 @@ a {
 	flex: 7 0 0;
 }
 
-#iframe-cover {
-	top: 0;
-	bottom: 0;
-	left: 0;
-	right: 0;
-}
-
 #cc {
 	flex: 3 0 0;
 }
 
-#cc .wrap {
-  top: 0;
-	bottom: 3rem;
-	left: 0;
-	right: 0;
-	overflow-y: auto;
-}
-
-#toolbar {
-	bottom: 0;
-	left: 0;
-	right: 0;
-	height: 3rem;
-}
-
-.text {
-	height: calc(100% - 1rem);
-	border: none;
-	resize: none;
-}
-
-#subs {
-	bottom: 1rem;
-}
-
+/* timeline */
 #timeline-map {
 	height: .5rem;
 }
 
 #timeline-map-scroll {
-	top: 0;
-	bottom: 0;
 	background-color: #FFFFFF88;
 }
 
@@ -62,11 +31,11 @@ a {
 	background-color: #333333;
 }
 
-#timeline-box {
-	top: 0;
-	bottom: 0;
+#cursor {
+	width: .5px;
 }
 
+/* timeline ruler */
 #ruler {
 	font-size: 9px;
 }
@@ -75,12 +44,6 @@ a {
 	top: calc(15% + 4px);
 	left: 3px;
 	line-height: 1em;
-}
-
-#cursor {
-	top: 0;
-	bottom: 0;
-	width: .5px;
 }
 
 .main-ruler {
@@ -101,25 +64,17 @@ a {
 	width: .5px;
 }
 
+/* timeline subs */
 .timeline-sub {
-	top: 0;
-	bottom: 0;
 	border: white solid .5px;
 	background-color: #FFFFFF88;
 }
 
 .move-target {
-	top: 0;
-	bottom: 0;
-	left: 0;
-	right: 0;
 	z-index: 9;
 }
 
 .drag {
-	top: 0;
-	bottom: 0;
-	/* background-color: blue; */
 	cursor: ew-resize;
 	z-index: 10;
 }
@@ -134,6 +89,26 @@ a {
 	right: 0;
 }
 
+/* cc */
+#subs{
+	overflow-y: auto;
+}
+
+#subs>.wrap {
+  top: 0;
+}
+
+#toolbar {
+	height: 3rem;
+}
+
+.text {
+	height: calc(100% - 1rem);
+	border: none;
+	resize: none;
+}
+
+/* help */
 #help {
 	left: 20%;
 	right: 20%;
